force-app/main/default/objects/Web_Forecast_Line_Item__c/Web_Forecast_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Web Forecast Line Item</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Web Forecast Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Forecast Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>