force-app/main/default/objects/Web_Forecast_Line_Item__c/fields/DDC_Item__c.field-meta.xml
<CustomField>
    <fullName>DDC_Item__c</fullName>
    <label>Servicing DDC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>