force-app/main/default/objects/Web_Forecast_Line_Item__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <inlineHelpText>Only the major appliance divisions can be forecast:  20, 22, 26 and 46</inlineHelpText>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>020</fullName>
            </value>
            <value>
                <fullName>022</fullName>
            </value>
            <value>
                <fullName>026</fullName>
            </value>
            <value>
                <fullName>046</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>