force-app/main/default/objects/Web_Forecast_Line_Item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <inlineHelpText>Only items stocked in the DDC and RRC can be forecast – we cannot accept forecast for EZ Order items</inlineHelpText>
    <label>Item</label>
    <length>20</length>
    <type>Text</type>
</CustomField>