force-app/main/default/objects/Web_Forecast_Line_Item__c/fields/Item_Dist_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Dist_Type__c</fullName>
    <inlineHelpText>DD = DDC / TW = RRC</inlineHelpText>
    <label>Distribution Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>