force-app/main/default/objects/Web_Forecast_Line_Item__c/fields/Item_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Item_Formatted__c</fullName>
    <label>Item Formatted</label>
    <length>40</length>
    <type>Text</type>
</CustomField>