force-app/main/default/objects/Web_Forecast_Line_Item__c/fields/Item_Rank__c.field-meta.xml
<CustomField>
    <fullName>Item_Rank__c</fullName>
    <label>Item Rank</label>
    <length>20</length>
    <type>Text</type>
</CustomField>