force-app/main/default/objects/Web_Forecast_Line_Item__c/fields/Qty_Week10__c.field-meta.xml
<CustomField>
    <fullName>Qty_Week10__c</fullName>
    <label>Qty_Week10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>