force-app/main/default/objects/Web_Forecast_Line_Item__c/fields/Qty_Week11__c.field-meta.xml
<CustomField>
    <fullName>Qty_Week11__c</fullName>
    <label>Qty_Week11</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>