force-app/main/default/objects/Web_Forecast_Line_Item__c/fields/RRC_Item__c.field-meta.xml
<CustomField>
    <fullName>RRC_Item__c</fullName>
    <label>Servicing RRC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>