force-app/main/default/objects/Web_Forecast_Line_Item__c/fields/Web_Forecast_Header__c.field-meta.xml
<CustomField>
    <fullName>Web_Forecast_Header__c</fullName>
    <label>Web_Forecast_Header</label>
    <referenceTo>Web_Forecast__c</referenceTo>
    <relationshipLabel>Web Forecast Line Items</relationshipLabel>
    <relationshipName>Web_Forecast_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>