force-app/main/default/objects/Web_Forecast_Line_Item__c/fields/Week10__c.field-meta.xml
<CustomField>
    <fullName>Week10__c</fullName>
    <formula>Week9__c + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week10</label>
    <type>Date</type>
</CustomField>