force-app/main/default/objects/Web_Forecast_Line_Item__c/fields/Week11__c.field-meta.xml
<CustomField>
    <fullName>Week11__c</fullName>
    <formula>Week10__c + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week11</label>
    <type>Date</type>
</CustomField>