force-app/main/default/objects/Web_Forecast_Line_Item__c/fields/Week12__c.field-meta.xml
<CustomField>
    <fullName>Week12__c</fullName>
    <formula>Week11__c + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week12</label>
    <type>Date</type>
</CustomField>