force-app/main/default/objects/Web_Forecast_Line_Item__c/validationRules/Item_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Item_Length</fullName>
    <active>false</active>
    <description>Item length should be 4 or 5 length</description>
    <errorConditionFormula>LEN( Item__c ) &lt;&gt; 4 || LEN( Item__c ) &lt;&gt; 5</errorConditionFormula>
    <errorDisplayField>Item__c</errorDisplayField>
    <errorMessage>Item length should be 4 or 5 characters</errorMessage>
</ValidationRule>